--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /index.html
-    destination: /home/ubuntu/web
+    destination: /home/ec2-user/web
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
