--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,13 @@ files:
     destination: /home/ec2-user/web
 hooks:
   BeforeInstall:
-    - location: scripts/install_dependencies
+    - location: scripts/clean_public_dir.sh
       timeout: 300
       runas: root
-    - location: scripts/start_server
-      timeout: 300
-      runas: root
-  ApplicationStop:
-    - location: scripts/stop_server
-      timeout: 300
-      runas: root
+      
+  ApplicationStart:
+    -location: scripts/start_server.sh
+     timeout: 300
+     runas: root
+      
 
