--- a/appspec.yml
+++ b/appspec.yml
@@ -1,16 +1,15 @@
-version: 0.0
-os: linux
-files:
-  - source: /
+--- 
+files: 
+  - 
     destination: /home/ec2-user/web
-hooks:
-  BeforeInstall:
-    - location: scripts/clean_public_dir.sh
+    source: /
+hooks: 
+  ApplicationStart: 
+    - 
+      location: scripts/start_server.sh
       timeout: 300
-      runas: root
-      
-  ApplicationStart:
-    -location: scripts/start_server.sh
-    runas: root
-      
-
+  BeforeInstall: 
+    - 
+      location: scripts/clean_public_dir.sh
+os: linux
+version: 0.0
