--- a/appspec.yml
+++ b/appspec.yml
@@ -15,5 +15,5 @@ hooks:
       runas: root
 
   ApplicationStart:
-    -location: scripts/start_server.sh
+    -location: scripts/start_server
     
